fix: harden reports finances and stock alerts